# Retrospective-insights

./: .env.example  .gitignore  AI_AGENT_IMPROVEMENT_PLAN.md  API_README.md  DESIGN.md  METRIC_PARSING_UPDATE.md  QUICK_START.md  README.md  api.py  main.py  mapped_sprint_data.json  pyproject.toml  run_analysis.py
src/agent/: agent.py  atlassian_tools.py
src/retrospective_insights/: __init__.py  ai_insights.py  analysis_engine.py  cli.py  data_fetcher.py  report_generator.py
tests/: __init__.py
